--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "fs-promise": "^0.3.1",
     "is-promise": "^2.1.0",
+    "lodash-node": "^3.10.1",
     "mime": "^1.3.4",
     "node-uuid": "^1.4.3"
   },
