--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "devDependencies": {
     "jest-cli": "^0.6.1"
   },
+  "engines" : {
+    "node" : ">=4.0.0"
+  },
   "jest": {
     "testDirectoryName": "tests/specs"
   }
